Made the robot rotate to the angle of the path Added the diagonals that creates the path Made the waypoints draggable Added reset and un/pause button on keyboard